--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,8 @@ ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin123
 
 # Database
-DATABASE_URL="file:./prisma/dev.db"
+# MySQL connection string format:
+# mysql://USER:PASSWORD@HOST:PORT/DATABASE
+# Example for local MySQL:
+# DATABASE_URL="mysql://root:password@localhost:3306/simadu"
+DATABASE_URL="mysql://USER:PASSWORD@HOST:3306/DB_NAME"
