feat: memperbarui file .env.example dengan petunjuk penggunaan dan menghapus kredensial admin yang tidak digunakan

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,38 @@
-# Copy this file to .env and fill the values
-# App
+# Environment variables for SIMADU-Tirta-Hita
+#
+# How to use:
+# 1) Copy this file to .env in the project root
+# 2) Replace the example values as needed
+# 3) Do NOT add variables that are not defined here (e.g., ADMIN_USERNAME, ADMIN_PASSWORD). They are not used.
+
+# App environment: development | test | production
+# Default is development if not set.
+NODE_ENV=development
+
+# Database connection string (MySQL)
+# Format: mysql://USER:PASSWORD@HOST:PORT/DB_NAME
+DATABASE_URL="mysql://root:password@localhost:3306/simadu"
+
+# Base URL where the app is served
+# - Development: http://localhost:3000
+# - Production: your public HTTPS URL
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=change_me_long_random
 
-# Admin credentials for Credentials provider (dev only)
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin123
+# Strong random secret for NextAuth
+# Generate a long random string (min 16 chars). Examples:
+# PowerShell (Windows): [guid]::NewGuid().ToString('N') + [guid]::NewGuid().ToString('N')
+# Node.js: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+NEXTAUTH_SECRET=change_me_to_a_long_random_value
 
-# Database
-# MySQL connection string format:
-# mysql://USER:PASSWORD@HOST:PORT/DATABASE
-# Example for local MySQL:
-# DATABASE_URL="mysql://root:password@localhost:3306/simadu"
-DATABASE_URL="mysql://USER:PASSWORD@HOST:3306/DB_NAME"
+# Internal credentials for HUMAS role (Credentials provider)
+HUMAS_USERNAME=humas
+HUMAS_PASSWORD=humas123
+
+# Internal credentials for DISTRIBUSI role (Credentials provider)
+DISTRIBUSI_USERNAME=distribusi
+DISTRIBUSI_PASSWORD=distribusi123
+
+# Note:
+# - ADMIN_USERNAME and ADMIN_PASSWORD are NOT used anywhere. Remove them if present in your .env
+# - Keep secrets out of version control. Commit only this .env.example file.
+ 
