feat: memperbarui berkas .env.example dengan petunjuk yang diperbarui dan catatan keamanan.

--- a/.env.example
+++ b/.env.example
@@ -3,36 +3,77 @@
 # How to use:
 # 1) Copy this file to .env in the project root
 # 2) Replace the example values as needed
-# 3) Do NOT add variables that are not defined here (e.g., ADMIN_USERNAME, ADMIN_PASSWORD). They are not used.
+# 3) Generate secure passwords and secrets using provided scripts
 
-# App environment: development | test | production
-# Default is development if not set.
+# ======================
+# App Environment
+# ======================
 NODE_ENV=development
 
-# Database connection string (MySQL)
+# ======================
+# Database (MySQL)
+# ======================
 # Format: mysql://USER:PASSWORD@HOST:PORT/DB_NAME
 DATABASE_URL="mysql://root:password@localhost:3306/simadu"
 
+# ======================
+# NextAuth Configuration
+# ======================
 # Base URL where the app is served
 # - Development: http://localhost:3000
-# - Production: your public HTTPS URL
+# - Production: your public HTTPS URL (must be HTTPS)
 NEXTAUTH_URL=http://localhost:3000
 
-# Strong random secret for NextAuth
-# Generate a long random string (min 16 chars). Examples:
-# PowerShell (Windows): [guid]::NewGuid().ToString('N') + [guid]::NewGuid().ToString('N')
-# Node.js: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
-NEXTAUTH_SECRET=change_me_to_a_long_random_value
+# Strong random secret for NextAuth (MINIMUM 32 characters)
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+# Or PowerShell: [guid]::NewGuid().ToString('N') + [guid]::NewGuid().ToString('N')
+NEXTAUTH_SECRET=change_me_to_secure_random_32_characters_minimum
 
-# Internal credentials for HUMAS role (Credentials provider)
+# ======================
+# User Credentials
+# ======================
+# HUMAS Account
 HUMAS_USERNAME=humas
+# Option 1: Plain password (DEPRECATED - dev only)
 HUMAS_PASSWORD=humas123
+# Option 2: Hashed password (RECOMMENDED - production)
+# Generate: npx ts-node scripts/generate-hashed-passwords.ts
+HUMAS_PASSWORD_HASH=$2a$10$LQ3aGmY8QXZ3X8sVXJZ9.ewKjWvQqGjY9Q7WXJ9nI5Z9XJ9nI5Z9X
 
-# Internal credentials for DISTRIBUSI role (Credentials provider)
+# DISTRIBUSI Account
 DISTRIBUSI_USERNAME=distribusi
+# Option 1: Plain password (DEPRECATED - dev only)
 DISTRIBUSI_PASSWORD=distribusi123
+# Option 2: Hashed password (RECOMMENDED - production)
+DISTRIBUSI_PASSWORD_HASH=$2a$10$LQ3aGmY8QXZ3X8sVXJZ9.ewKjWvQqGjY9Q7WXJ9nI5Z9XJ9nI5Z9X
 
-# Note:
-# - ADMIN_USERNAME and ADMIN_PASSWORD are NOT used anywhere. Remove them if present in your .env
-# - Keep secrets out of version control. Commit only this .env.example file.
+# ======================
+# Redis (Optional)
+# ======================
+# Recommended for production rate limiting (multi-instance deployments)
+# Use Upstash Redis or your own Redis instance
+# UPSTASH_REDIS_REST_URL=https://your-redis.upstash.io
+# UPSTASH_REDIS_REST_TOKEN=your_redis_token
+
+# ======================
+# IMPORTANT NOTES
+# ======================
+# ⚠️  For Production:
+#    - MUST use HASHED passwords (_PASSWORD_HASH), not plain text
+#    - NEXTAUTH_SECRET must be 32+ characters random string
+#    - Enable HTTPS (NEXTAUTH_URL must start with https://)
+#    - Configure Redis for scalable rate limiting
+#
+# 🔒 Security:
+#    - NEVER commit .env file to git
+#    - Only commit this .env.example template
+#    - Rotate secrets regularly
+#
+# 🚀 Quick Setup:
+#    1. cp .env.example .env
+#    2. npx ts-node scripts/generate-hashed-passwords.ts
+#    3. Copy output to .env
+#    4. npm run db:migrate
+#    5. npm run dev
+
  
